--- a/CustomerPolicy/src/main/resources/application.properties
+++ b/CustomerPolicy/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=CustomerPolicy
-server.port = 8888
+server.port=8888
 
 spring.security.user.name=usr
 spring.security.user.password=pwd
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/zurich?createDatabaseIfNotExist=true
 spring.datasource.username=root
